--- a/mainpage.html
+++ b/mainpage.html
@@ -700,7 +700,7 @@
 
                     <li class="work work3">
                         <h2>03/</h2>
-                        <a href="index2.html" target="_blank"><img src="images/메인3.png"></a>
+                        <a href="temburins.html" target="_blank"><img src="images/메인3.png"></a>
                         <p class="click click3">click</p>
                         <p class="sub-text">- 탬버린즈 홈페이지 제작 -<br>
                         개성있는 탬버린즈의 느낌을 살려 제작했습니다. 제가 생각했을 때 떠오른 브랜드의 이미지를 더 돋보이게 제작 했습니다.</p>
