--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             overflow:hidden;
             position:relative;
             left:0;
-            top:120px;
+            top:240px;
         }
 
         #text-box {
@@ -566,13 +566,13 @@
 
             <div id="text-slide">
               <div id="text-box">
-                  <p>hello~&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;hello~</p>
-                  <p>hello~&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;hello~</p>
-                  <p>hello~&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;hello~</p>
-                  <p>hello~&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;hello~</p>
-                  <p>hello~&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;hello~</p>
-                  <p>hello~&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;hello~</p>
-                  <p>hello~&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;hello~</p>
+                  <p>♥︎&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;♥︎</p>
+                  <p>♥︎&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;♥︎</p>
+                  <p>♥︎&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;♥︎</p>
+                  <p>♥︎&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;♥︎</p>
+                  <p>♥︎&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;♥︎</p>
+                  <p>♥︎&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;♥︎</p>
+                  <p>♥︎&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;♥︎</p>
               </div>
             </div>
         </div>
