--- a/index.html
+++ b/index.html
@@ -228,12 +228,14 @@
             background:lightblue;
             display:flex;
             justify-content:space-evenly;
-            height:820px;
+            height:100vh;
         }
 
         #skills>h1 {
+           height:100px;
            color:white;
            font-size:50pt;
+           margin-left:-235px;
         }
 
         #skills>ul {
@@ -248,8 +250,8 @@
         .a-list {
             width:600px;
             height:600px;
-            margin-top:80px;
-            margin-left:100px;
+            margin-top:200px;
+            margin-left:-200px;
         }
 
         .a-list>li>span {
@@ -266,7 +268,7 @@
         .b-list {
             width:600px;
             height:400px;
-            margin-top:80px;
+            margin-top:200px;
         }
 
         .b-list>li>span {
@@ -283,7 +285,7 @@
         .skill-pic {
             position:absolute;
             top:620px;
-            left:1000px;
+            left:1130px;
         }
 
         .skillpic1 {
@@ -488,7 +490,6 @@
             #skills {
                 width:768px;
                 height:1024px;
-                
             }
 
             .skill-text {
@@ -611,8 +612,8 @@
     </div>
 
     <div class="section fp-auto-height fp-auto-height-responsive">
-        <h1 class="skill-text">- skills</h1>
         <div id="skills">
+          <h1 class="skill-text">- skills</h1>
           <ul class="a-list wow slideInLeft" data-wow-duration="2s" data-wow-delay="0.2s">
               <li>
                   <span>-HTML</span>
