--- a/index.html
+++ b/index.html
@@ -420,6 +420,7 @@
             color:white;
             font-size:50pt;
             text-shadow:2px 2px 7px rgb(0, 183, 255);
+            margin-left:-140px;
         }
 
         .contact-list {
@@ -452,8 +453,10 @@
             animation:wink 1s step-end infinite;
         }
 
-        #footer>h1 {font-size:50pt;
-                    color:white;}
+        #footer>h1 {
+            font-size:50pt;
+            color:white;
+        }
 
         #footer>.thank {
             font-size:120pt;
